--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2301,6 +2301,18 @@ msgstr "Non può essere eliminata."
 msgid "There are existing reservations associated with this resource"
 msgstr "Sono presenti delle prenotazioni associate a questa risorsa"
 
+msgid "There are existing reservations associated with this resource that will "
+"be deleted as well. This cannot be undone and will take a while depending on "
+"the number of reservations."
+msgstr "Anche le prenotazioni esistenti associate a questa risorsa saranno "
+"eliminate. Questa operazione non può essere annullata e richiederà un po' "
+"di tempo, a seconda del numero di prenotazioni."
+
+msgid "This cannot be undone and will take a while depending on the number "
+"of reservations."
+msgstr "Questa operazione non può essere annullata e richiederà un po' di "
+"tempo, a seconda del numero di prenotazioni."
+
 msgid "Clean up"
 msgstr "Ripulisci"
 
