--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2294,12 +2294,12 @@ msgstr "Cette ressource ne peut être supprimée."
 msgid "There are existing reservations associated with this resource"
 msgstr "Des réservations existantes sont associées à cette ressource"
 
-msgid "There are existing reservations associated with this resource that will "
-"be deleted as well. This cannot be undone and will take a while depending on "
-"the number of reservations."
-msgstr "Des réservations existantes associées à cette ressource seront "
-"également supprimées. Cette opération ne peut être annulée et prendra un "
-"certain temps en fonction du nombre de réservations."
+msgid "There are future reservations associated with this resource that will "
+"also be deleted. This cannot be undone and will take a while depending "
+"on the number of reservations."
+msgstr "Des réservations futures associées à cette ressource seront également "
+"supprimées. Cette opération ne peut être annulée et prendra un certain temps "
+"en fonction du nombre de réservations."
 
 msgid "This cannot be undone and will take a while depending on the number "
 "of reservations."
